--- a/index.html
+++ b/index.html
@@ -29,50 +29,101 @@
         </section>
 
         <!-- Regras -->
-        <section id="regras" class="screen">
-            <button class="btn-voltar" data-target="home">← Voltar</button>
-            <h2>Regras do kULudo</h2>
-            <pre class="texto-bloco">
-Regulamento Soleníssimo do KULudo
+      <section id="regras" class="screen">
+    <button class="btn-voltar" data-target="home">← Voltar</button>
 
-1. Do Elevado Objetivo
-Cada cavalheiro ou dama, armado de quatro peões lustrosos, deverá conduzi-los desde sua modesta moradia inicial até o mais augusto e glorioso destino: o centro místico conhecido por CU Ludo.
-Somente aquele que lograr a façanha de fazer penetrar, em altiva sequência, todos os seus digníssimos peões no recinto final será proclamado vencedor, gozando do triunfo e do riso malicioso dos circunstantes.
+    <div class="regras-livro">
+        <div class="regras-cabecalho">
+            <span class="icone-livro">📜</span>
+            <h2>Regulamento Soleníssimo do CU Ludo</h2>
+            <span class="icone-livro">🎲</span>
+        </div>
 
-2. Dos Preliminares e Preparações
-O tabuleiro, qual obra de arte bizantina, ostenta quatro matizes régios: vermelho, azul, amarelo e verde. Cada competidor apodera-se de uma cor e repousa seus quatro bravos peões na morada inicial. Um único dado, cúmplice do acaso, regerá os destinos, como oráculo de marfim.
+        <p class="regras-intro">
+            Um compêndio nobilíssimo para orientar cavalheiros e damas na arte refinada de
+            conduzir peões lustrosos até o augusto e glorioso centro místico conhecido por CU Ludo.
+        </p>
 
-3. Do Início Cerimonioso
-Somente com a graça do número 6 ou do recatado 1 é que um peão se desprenderá de sua clausura para adentrar os meandros da disputa.
-Caso o audaz jogador extraia o venerável número 6, receberá a mercê de novo arremesso. Contudo, se a Providência lhe conceder três seis seguidos, terá o dissabor de ver o último peão, tão afoito, retornar humilhado ao lar de onde nunca deveria ter saído.
+        <h3>1. Do Elevado Objetivo <span class="emoji-sec">✨</span></h3>
+        <p>
+            Cada cavalheiro ou dama, armado de quatro peões lustrosos, deverá conduzi-los desde
+            sua modesta moradia inicial até o mais augusto e glorioso destino: o centro místico
+            conhecido por CU Ludo. Somente aquele que lograr a façanha de fazer penetrar, em altiva
+            sequência, todos os seus digníssimos peões no recinto final será proclamado vencedor,
+            gozando do triunfo e do riso malicioso dos circunstantes.
+        </p>
 
-4. Do Marchar Ordinário
-Os peões avançam comedidamente no sentido horário, como convém às engrenagens de um relojoeiro suíço.
-Somente após percorrer toda a vastidão do tabuleiro é que terão a permissão de ingressar no corredor exclusivo de sua cor — a antecâmara, estreita e sagrada do tão comentado CU Ludo.
+        <h3>2. Dos Preliminares e Preparações <span class="emoji-sec">♟️</span></h3>
+        <p>
+            O tabuleiro, qual obra de arte bizantina, ostenta quatro matizes régios: vermelho, azul,
+            amarelo e verde. Cada competidor apodera-se de uma cor e repousa seus quatro bravos
+            peões na morada inicial. Um único dado, cúmplice do acaso, regerá os destinos, como
+            oráculo de marfim.
+        </p>
 
-5. Da Captura (ou, como diriam os mais travessos, da Comedura)
-Quando um peão, impetuoso, arremete contra a casa ocupada por outro, não se fala em encontro cordial, mas em ato de captura, ou uma bela de uma sarrada. O pobre adversário, devidamente “comido”, é despachado sem cerimônia de volta à sua residência.
-Apenas nas casas sagradas de início e nas de distinção especial (que se dizem “seguras”) o banquete é vedado.
+        <h3>3. Do Início Cerimonioso <span class="emoji-sec">🎲</span></h3>
+        <p>
+            Somente com a graça do número 6 ou do recatado 1 é que um peão se desprenderá de sua
+            clausura para adentrar os meandros da disputa. Caso o audaz jogador extraia o venerável
+            número 6, receberá a mercê de novo arremesso. Contudo, se a Providência lhe conceder três
+            seis seguidos, terá o dissabor de ver o último peão, tão afoito, retornar humilhado ao lar
+            de onde nunca deveria ter saído.
+        </p>
 
-6. Das Casas de Distinção
-Alguns espaços ostentam a coroa real, símbolo de que ali se pode repousar em dupla companhia sem o risco de ser devorado por forças hostis. Tais recantos são conhecidos como check in points pelos eruditos, ou como “a pausa para o chá” pelos mais espirituosos.
+        <h3>4. Do Marchar Ordinário <span class="emoji-sec">➡️</span></h3>
+        <p>
+            Os peões avançam comedidamente no sentido horário, como convém às engrenagens de um relojoeiro suíço.
+            Somente após percorrer toda a vastidão do tabuleiro é que terão a permissão de ingressar no corredor
+            exclusivo de sua cor — a antecâmara, estreita e sagrada do tão comentado CU Ludo.
+        </p>
 
-7. Da Barreira Intransponível — A Biroula de CU Ludo
-Sucede, por vezes, que um jogador, tomado de súbita esperteza ou de mero acaso, venha a sobrepor duas de suas peças numa mesma casa. Eis então erguida uma fortaleza impenetrável, uma muralha digna de Jericó, a famosa Biroula de CU Ludo, a qual bloqueia não apenas os intrépidos adversários, mas também o próprio construtor da desfaçatez.
-Importa salientar que tal barreira só poderá ser erigida com duas peças — nem mais, nem menos. Três já seria exagero, uma afronta ao bom gosto e à etiqueta lúdica.
-Eis, porém, o detalhe mais capcioso: caso o dado, em seu capricho, presenteie o jogador com um 6, este estará solenemente obrigado a desfazer sua própria barricada, libertando o fluxo do tabuleiro, como quem abre os portões de uma cidade sitiada.
+        <h3>5. Da Captura (ou, como diriam os mais travessos, da Comedura) <span class="emoji-sec">🍽️</span></h3>
+        <p>
+            Quando um peão, impetuoso, arremete contra a casa ocupada por outro, não se fala em encontro cordial,
+            mas em ato de captura, ou uma bela de uma sarrada. O pobre adversário, devidamente “comido”, é
+            despachado sem cerimônia de volta à sua residência. Apenas nas casas sagradas de início e nas de
+            distinção especial (que se dizem “seguras”) o banquete é vedado.
+        </p>
 
-8. Do Corredor e do Grand Finale
-Após a peregrinação pelo tabuleiro, o peão se introduz no corredor de sua cor, devendo, com passo preciso, alcançar o augusto KULudo.
-Se o dado, em sua ironia, exceder o necessário, o peão deverá ir e voltar, num vaivém quase coreográfico, até que o número exato lhe seja concedido.
-Cumpre ainda destacar: ao ingressar nesse corredor, o jogador deve, com voz solene, exclamar “CU Ludo!”. O esquecimento desta liturgia, caso denunciado por adversário vigilante, obriga o peão relapso a retornar ao início, sob o escárnio geral.
+        <h3>6. Das Casas de Distinção <span class="emoji-sec">👑</span></h3>
+        <p>
+            Alguns espaços ostentam a coroa real, símbolo de que ali se pode repousar em dupla companhia sem o
+            risco de ser devorado por forças hostis. Tais recantos são conhecidos como check in points pelos
+            eruditos, ou como “a pausa para o chá” pelos mais espirituosos.
+        </p>
 
-9. Da Vitória Esplendorosa
-A glória caberá àquele que primeiro conseguir introduzir todos os seus quatro peões no recinto final, o KuLudo.
-O jogo cessa de imediato, proclamando-se o felizardo como o Magnífico Penetrador do KULudo, ao passo que os demais, desprovidos de honra, recolhem-se cabisbaixos, tragados pela vergonha e pelo riso dos espectadores.
+        <h3>7. Da Barreira Intransponível — A Biroula de CU Ludo <span class="emoji-sec">🚧</span></h3>
+        <p>
+            Sucede, por vezes, que um jogador, tomado de súbita esperteza ou de mero acaso, venha a sobrepor duas
+            de suas peças numa mesma casa. Eis então erguida uma fortaleza impenetrável, uma muralha digna de Jericó,
+            a famosa Biroula de CU Ludo, a qual bloqueia não apenas os intrépidos adversários, mas também o próprio
+            construtor da desfaçatez. Importa salientar que tal barreira só poderá ser erigida com duas peças —
+            nem mais, nem menos. Três já seria exagero, uma afronta ao bom gosto e à etiqueta lúdica. Eis, porém,
+            o detalhe mais capcioso: caso o dado, em seu capricho, presenteie o jogador com um 6, este estará
+            solenemente obrigado a desfazer sua própria barricada, libertando o fluxo do tabuleiro, como quem abre
+            os portões de uma cidade sitiada.
+        </p>
 
-            </pre>
-        </section>
+        <h3>8. Do Corredor e do Grand Finale <span class="emoji-sec">🏁</span></h3>
+        <p>
+            Após a peregrinação pelo tabuleiro, o peão se introduz no corredor de sua cor, devendo, com passo
+            preciso, alcançar o augusto CU Ludo. Se o dado, em sua ironia, exceder o necessário, o peão deverá ir e
+            voltar, num vaivém quase coreográfico, até que o número exato lhe seja concedido. Cumpre ainda destacar:
+            ao ingressar nesse corredor, o jogador deve, com voz solene, exclamar “CU Ludo!”. O esquecimento desta
+            liturgia, caso denunciado por adversário vigilante, obriga o peão relapso a retornar ao início, sob o
+            escárnio geral.
+        </p>
+
+        <h3>9. Da Vitória Esplendorosa <span class="emoji-sec">🏆</span></h3>
+        <p>
+            A glória caberá àquele que primeiro conseguir introduzir todos os seus quatro peões no recinto final,
+            o Cu Ludo. O jogo cessa de imediato, proclamando-se o felizardo como o Magnífico Penetrador do CU Ludo,
+            ao passo que os demais, desprovidos de honra, recolhem-se cabisbaixos, tragados pela vergonha e pelo
+            riso dos espectadores.
+        </p>
+    </div>
+</section>
+
 
         <!-- Jogadores -->
         <section id="jogadores" class="screen">
@@ -154,4 +205,5 @@ O jogo cessa de imediato, proclamando-se o felizardo como o Magnífico Penetrado
 <script src="script.js"></script>
 </body>
 </html>
+
 
