--- a/index.html
+++ b/index.html
@@ -35,20 +35,20 @@
     <div class="regras-livro">
         <div class="regras-cabecalho">
             <span class="icone-livro">📜</span>
-            <h2>Regulamento Soleníssimo do CU Ludo</h2>
+            <h2>Regulamento Soleníssimo do KU Ludo</h2>
             <span class="icone-livro">🎲</span>
         </div>
 
         <p class="regras-intro">
             Um compêndio nobilíssimo para orientar cavalheiros e damas na arte refinada de
-            conduzir peões lustrosos até o augusto e glorioso centro místico conhecido por CU Ludo.
+            conduzir peões lustrosos até o augusto e glorioso centro místico conhecido por KULudo.
         </p>
 
         <h3>1. Do Elevado Objetivo <span class="emoji-sec">✨</span></h3>
         <p>
             Cada cavalheiro ou dama, armado de quatro peões lustrosos, deverá conduzi-los desde
             sua modesta moradia inicial até o mais augusto e glorioso destino: o centro místico
-            conhecido por CU Ludo. Somente aquele que lograr a façanha de fazer penetrar, em altiva
+            conhecido por KULudo. Somente aquele que lograr a façanha de fazer penetrar, em altiva
             sequência, todos os seus digníssimos peões no recinto final será proclamado vencedor,
             gozando do triunfo e do riso malicioso dos circunstantes.
         </p>
@@ -74,7 +74,7 @@
         <p>
             Os peões avançam comedidamente no sentido horário, como convém às engrenagens de um relojoeiro suíço.
             Somente após percorrer toda a vastidão do tabuleiro é que terão a permissão de ingressar no corredor
-            exclusivo de sua cor — a antecâmara, estreita e sagrada do tão comentado CU Ludo.
+            exclusivo de sua cor — a antecâmara, estreita e sagrada do tão comentado KULudo.
         </p>
 
         <h3>5. Da Captura (ou, como diriam os mais travessos, da Comedura) <span class="emoji-sec">🍽️</span></h3>
@@ -92,11 +92,11 @@
             eruditos, ou como “a pausa para o chá” pelos mais espirituosos.
         </p>
 
-        <h3>7. Da Barreira Intransponível — A Biroula de CU Ludo <span class="emoji-sec">🚧</span></h3>
+        <h3>7. Da Barreira Intransponível — A Biroula de KULudo <span class="emoji-sec">🚧</span></h3>
         <p>
             Sucede, por vezes, que um jogador, tomado de súbita esperteza ou de mero acaso, venha a sobrepor duas
             de suas peças numa mesma casa. Eis então erguida uma fortaleza impenetrável, uma muralha digna de Jericó,
-            a famosa Biroula de CU Ludo, a qual bloqueia não apenas os intrépidos adversários, mas também o próprio
+            a famosa Biroula de KULudo, a qual bloqueia não apenas os intrépidos adversários, mas também o próprio
             construtor da desfaçatez. Importa salientar que tal barreira só poderá ser erigida com duas peças —
             nem mais, nem menos. Três já seria exagero, uma afronta ao bom gosto e à etiqueta lúdica. Eis, porém,
             o detalhe mais capcioso: caso o dado, em seu capricho, presenteie o jogador com um 6, este estará
@@ -107,9 +107,9 @@
         <h3>8. Do Corredor e do Grand Finale <span class="emoji-sec">🏁</span></h3>
         <p>
             Após a peregrinação pelo tabuleiro, o peão se introduz no corredor de sua cor, devendo, com passo
-            preciso, alcançar o augusto CU Ludo. Se o dado, em sua ironia, exceder o necessário, o peão deverá ir e
+            preciso, alcançar o augusto KULudo. Se o dado, em sua ironia, exceder o necessário, o peão deverá ir e
             voltar, num vaivém quase coreográfico, até que o número exato lhe seja concedido. Cumpre ainda destacar:
-            ao ingressar nesse corredor, o jogador deve, com voz solene, exclamar “CU Ludo!”. O esquecimento desta
+            ao ingressar nesse corredor, o jogador deve, com voz solene, exclamar “KULudo!”. O esquecimento desta
             liturgia, caso denunciado por adversário vigilante, obriga o peão relapso a retornar ao início, sob o
             escárnio geral.
         </p>
@@ -117,7 +117,7 @@
         <h3>9. Da Vitória Esplendorosa <span class="emoji-sec">🏆</span></h3>
         <p>
             A glória caberá àquele que primeiro conseguir introduzir todos os seus quatro peões no recinto final,
-            o Cu Ludo. O jogo cessa de imediato, proclamando-se o felizardo como o Magnífico Penetrador do CU Ludo,
+            o KULudo. O jogo cessa de imediato, proclamando-se o felizardo como o Magnífico Penetrador do KULudo,
             ao passo que os demais, desprovidos de honra, recolhem-se cabisbaixos, tragados pela vergonha e pelo
             riso dos espectadores.
         </p>
@@ -205,5 +205,6 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
